--- a/index.html
+++ b/index.html
@@ -1851,6 +1851,11 @@
               <td>Individual</td>
               <td>Open-source community efforts; DevOps; Development; Testing; Helping companies adopt scalable Open Source IaC practices and tools</td>
             </tr>
+            <tr>
+              <td><a href="https://github.com/kolegych">Aleh Katsuba</a></td>
+              <td>Individual</td>
+              <td>Development; Testing</td>
+            </tr>
           </tbody>
         </table>
 
